# crypto-exchange

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/actors/: Cargo.toml  PHASE2_RESULTS.md
crates/actors/src/: actor.rs  command.rs  lib.rs
crates/actors/tests/: load.rs
crates/api/: Cargo.toml  PHASE4_RESULTS.md  PHASE5_RESULTS.md
crates/api/src/: auth.rs  error.rs  handlers.rs  http.rs  idempotency.rs  lib.rs  ratelimit.rs  service.rs  wal.rs
crates/api/tests/: auth_boundary.rs  e2e.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/ledger/: Cargo.toml  PHASE3_RESULTS.md
crates/ledger/migrations/: 20240101000000_initial.sql
crates/ledger/src/: error.rs  lib.rs  memory.rs  model.rs  postgres.rs
crates/ledger/tests/: double_spend.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: throughput.rs
crates/matching-engine/src/: engine.rs  lib.rs  types.rs
crates/matching-engine/tests/: edge_cases.rs  invariants.proptest-regressions  invariants.rs  latency.rs
