[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# Phase 0 stub. The real deps (axum, tower, serde, jsonwebtoken) arrive
# in Phase 4 (auth) and Phase 5 (REST integration).
[dependencies]
common = { path = "../common" }