[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
ledger = { path = "../ledger" }
actors = { path = "../actors" }
thiserror = "1"
argon2 = { version = "0.5", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "fs", "io-util"] }
tower = "0.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "exchange-server"
path = "src/bin/exchange_server.rs"